--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -34,11 +34,11 @@ html, body {
   border-radius: 10px;
   font-size: 20px;
 }
-.box .button{
+.box button{
   margin: 10px;
   padding: 10px;
 }
-.box .button:hover{
+.box button:hover{
   cursor: pointer;
   transform: scale(1.1);
   transition: all 0.3s ease-in-out;
